{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "70261f00-050a-4251-b854-c87fa73fa26a",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "df5699d5-d7e3-4aaf-9943-d1640ffdcf31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "b1cab4d5-71fa-4472-9a62-2ce262cd6c5a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "MultiTap"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0d485ff4-52e6-4437-a89f-1df5864d1629",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c52d635-305c-4c54-aed8-a155441b90a4",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": []
        }
    ]
}